# custom_policychecks

./: .gitignore  CLAUDE.md  README.md  __init__.py  liquibase.checks-settings.conf  pyproject.toml  run_tests.py
.claude/agents/: liquibase-test-builder.md
.liquibase/: settings.json
AnyDB/: EnumerationListContext.md  MultipleCreateProceduresNotAllowed.md  MultipleCreateTablesNotAllowed.md  MultipleDropsNotAllowed.md  NoDBCLString.md  NoDataDmlStatements.md  NoSelect.md  NoSelectStar.md  TablenamesMustBeUppercase.md  TablesMustHaveCreateTableOnly.md  TablesMustHavePkOrBeNamedNpk.md  ViewsMustHaveCreateOrReplaceViewOnly.md
Cassandra/: CreateTableMustHaveSystemKeyFile.md
MariaDB/: CannotModifyUsersOrRoles.md  PreventLockingColumnOrIndex.md
MongoDB/:  mongoCrCollectionValidatorChk.md  NoDeleteMany.md  NoDropCollection.md  NoDropIndex.md  NoUpdateMany.md  mongoCrIndexNameStdChk.md  mongoCreateIdxWarning.md  mongoNoDeleteMany.md  mongoNoDropCollection.md  mongoNoDropIndex.md  mongoNoMergeAggregation.md  mongoNoRenameCollection.md
Oracle/: CreateTableMustHavePartition.md  CreateTableMustHavePrimaryKey.md  ExecuteImmediateWarning.md  NoAlterUser.md  NoCreateUser.md  NoDBLinks.md  NoDeleteWithoutWhere.md  NoGrantAll  NoGrantAll.md  NoGrantsToPublic.md  NoGrantsToSystem.md  NoSystemSchemaChanges.md
Python/: README.md  __init__.py
Python/Changesets/: changelog.ddl.xml  changelog.dml.xml  changelog.mongo.js  createindex.sql  varchar2test.sql
Python/Scripts/: billing_mode.py  check_buffer_pool.py  collection_name_is_camelcase.py  column_default_value.py  create_index_count.py  create_table_tablespace.py  current_schema_only.py  delete_without_where.py  identifiers_without_quotes.py  key_value_quotes.py  pk_names.py  pk_tablespace.py  table_column_disallow.py  table_column_name_size.py  table_name_is_camelcase.py  varchar2_must_use_char.py  varchar_max_size.py  varchar_preferred.py
Python/tests/: __init__.py  test_create_index_count.py  test_delete_without_where.py  test_fk_names.py  test_identifiers_without_quotes.py  test_illegal_alter.py  test_row_level_security_advanced.py  test_row_level_security_basic.py  test_servicenow_chg_label.py  test_table_name_is_camelcase.py  test_table_names_uppercase.py  test_timestamp_column_name.py  test_varchar2_must_use_char.py
Regex/: README.md
Regex/AnyDB/: CRQLabelRequired.md  CreateTableMustHaveCommentOnTable.md  CreateTableTrackingColumns.md  MultipleCreateTablesNotAllowed.md  MultipleGrantsNotAllowed.md  NoDBCLString.md  NoDataDmlStatements.md  NoSelectStar.md  OnlySpecificSchemasAllowed.md  TableNamesCannotBeMoreThan26Characters.md  TablenamesMustBeUppercase.md  TablesMustHaveCreateTableOnly.md  TablesMustHavePkOrBeNamedNpk.md  ViewsMustHaveCreateOrReplaceViewOnly.md
Regex/Cassandra/: CreateTableMustHaveIFNOTEXIST.md
Regex/Db2zos/: CreateTableMustHaveRestrictOnDrop.md  CreateTablespaceMustHaveDssize8G.md  (+6 more)
SQL Server/: CreateProcedureMustHaveGrantExecute.md  CreateTableMustHavePrimaryKey.md  MultipleCreateTablesNotAllowed.md  NoAlterIndex.md  NoAlterTable.md  NoCreateTable.md  NoCursor.md  NoDeleteWithoutWhere.md  NoExecute.md  NoGrantExceptGrantExecute.md  NoGrantWithGrantOption.md  NoOpenDataSource.md  OnlyTempTableDropAllowed.md
Snowflake/: CreateObjectCheck.md  CreateTableMustHaveDataRetention.md
docs/: BUG_REPORT.md  FINAL_SUMMARY.md  JIRA_BUG1_PRINT_STATEMENT.md  JIRA_BUG7_SYS_EXIT.md  PROGRESS_SUMMARY.md  SERVICENOW_CHG_README.md  TEST_EXECUTION_SUMMARY.md  TEST_PLAN.md  row-level-security-user-guide.md
(+102 files in other folders)
